Support custom typeMappings and instantiation types.
